[workspace]
resolver = "2"
members = [
    "netwopenapi",
    "netwopenapi-core",
    "netwopenapi-gen",
    "netwopenapi-gen-test",
    "netwopenapi-models"
]

[workspace.package]
authors = ["Netwo <oss@netwo.com>"]
edition = "2021"
repository = "https://github.com/netwo-io/netwopenapi"
documentation = "https://docs.rs/netwopenapib/"
license = "MIT"
rust-version = "1.71"
publish = true

[workspace.dependencies]
actix-service = "2"
actix-web = "4"
assert-json-diff = "2.0.2"
convert_case = "0.6"
darling = "0.20"
indexmap = { version = "2", features = ["serde"] }
once_cell = "1"
pin-project = "1"
proc-macro2 = "1.0"
proc-macro-error = "1.0"
quote = "1.0"
regex = "1"
schemars = { version = "0.8", features = ["chrono", "uuid1", "url", "rust_decimal"] }
serde = "1"
serde_json = "1"
syn = "2.0"

actix-multipart = "0.6"
garde-actix-web = "0.1"
chrono = "0.4"
garde = "0.14"
rust_decimal = "1"
serde_qs = "0.12"
uuid = "1"
url = "2"
