[workspace]
resolver = "2"
members = [
    "apistos",
    "apistos-core",
    "apistos-gen",
    "apistos-gen-test",
    "apistos-models",
    "apistos-plugins",
    "apistos-rapidoc",
    "apistos-redoc",
    "apistos-scalar",
    "apistos-shuttle",
    "apistos-swagger-ui"
]

[workspace.package]
authors = ["Netwo <oss@netwo.com>"]
edition = "2024"
repository = "https://github.com/netwo-io/apistos"
documentation = "https://docs.rs/apistos/"
license = "MIT OR Apache-2.0"
rust-version = "1.85.0"
publish = true
version = "0.6.0"

[workspace.dependencies]
actix-service = "2"
actix-web = "4"
actix-web-grants = "4"
actix-web-lab = "0.24"
assert-json-diff = "2.0.2"
convert_case = "0.8"
darling = "0.20"
futures-core = "0.3"
futures-util = "0.3"
indexmap = "2"
log = "0.4"
num_cpus = "1.16"
md5 = "0.7"
once_cell = "1"
pin-project = "1"
proc-macro2 = "1.0"
proc-macro-error = "1.0"
quote = "1.0"
regex = ">=1.5.5"
schemars = { package = "apistos-schemars", git = "https://github.com/Pzixel/apistos-schemars.git", rev = "50a7422095c031f4865a4867d2cb6ac15536d46a", version = "0.8.22" }
serde = "1"
serde_json = "1"
syn = "2.0"

actix-multipart = "0.7"
actix-session = "0.10"
garde-actix-web = "0.11"
chrono = "0.4"
garde = { version = "0.22", features = ["derive", "serde"] }
rust_decimal = "1"
serde_qs = "0.14"
shuttle-runtime = { version = "0.53", default-features = false }
uuid = { version = "1", features = ["serde", "v4"] }
url = "2"
alloy-primitives = { version = "1.3.0", default-features = false }

[workspace.lints.rust]
unsafe_code = "forbid"
macro_use_extern_crate = "warn"
non-ascii-idents = "warn"
noop_method_call = "warn"
unreachable_pub = "warn"
unused_crate_dependencies = "warn"
unused_import_braces = "warn"
unused-lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
bool_to_int_with_if = "warn"
branches_sharing_code = "warn"
case_sensitive_file_extension_comparisons = "warn"
checked_conversions = "warn"
cloned_instead_of_copied = "warn"
copy_iterator = "warn"
create_dir = "warn"
dbg_macro = "warn"
debug_assert_with_mut_call = "warn"
derive_partial_eq_without_eq = "warn"
doc_link_with_quotes = "warn"
doc_markdown = "warn"
empty_drop = "warn"
empty_line_after_outer_attr = "warn"
enum_glob_use = "warn"
equatable_if_let = "warn"
exit = "warn"
expect_used = "warn"
expl_impl_clone_on_copy = "warn"
explicit_deref_methods = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
fallible_impl_from = "warn"
filetype_is_file = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
float_cmp = "warn"
float_cmp_const = "warn"
fn_params_excessive_bools = "warn"
fn_to_numeric_cast_any = "warn"
from_iter_instead_of_collect = "warn"
implicit_clone = "warn"
inefficient_to_string = "warn"
invalid_upcast_comparisons = "warn"
items_after_statements = "warn"
iter_not_returning_iterator = "warn"
iter_on_empty_collections = "warn"
iter_on_single_items = "warn"
iter_with_drain = "warn"
large_digit_groups = "warn"
large_include_file = "warn"
large_stack_arrays = "warn"
large_types_passed_by_value = "warn"
linkedlist = "warn"
lossy_float_literal = "warn"
macro_use_imports = "warn"
manual_assert = "warn"
manual_clamp = "warn"
manual_instant_elapsed = "warn"
manual_let_else = "warn"
manual_ok_or = "warn"
many_single_char_names = "warn"
match_bool = "warn"
match_on_vec_items = "warn"
match_wild_err_arm = "warn"
match_wildcard_for_single_variants = "warn"
maybe_infinite_iter = "warn"
mem_forget = "warn"
mismatching_type_param_order = "warn"
mixed_read_write_in_expression = "warn"
mut_mut = "warn"
mutex_atomic = "warn"
mutex_integer = "warn"
needless_bitwise_bool = "warn"
needless_collect = "warn"
needless_continue = "warn"
needless_for_each = "warn"
needless_pass_by_value = "warn"
negative_feature_names = "warn"
no_effect_underscore_binding = "warn"
nonstandard_macro_braces = "warn"
option_option = "warn"
or_fun_call = "warn"
panic = "warn"
path_buf_push_overwrite = "warn"
print_stderr = "warn"
print_stdout = "warn"
range_minus_one = "warn"
range_plus_one = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
redundant_feature_names = "warn"
ref_binding_to_reference = "warn"
rest_pat_in_fully_bound_structs = "warn"
same_functions_in_if_condition = "warn"
same_name_method = "warn"
significant_drop_in_scrutinee = "warn"
string_slice = "warn"
suspicious_operation_groupings = "warn"
suspicious_xor_used_as_pow = "warn"
todo = "warn"
trailing_empty_array = "warn"
trait_duplication_in_bounds = "warn"
trivially_copy_pass_by_ref = "warn"
try_err = "warn"
type_repetition_in_bounds = "warn"
unchecked_duration_subtraction = "warn"
unicode_not_nfc = "warn"
unimplemented = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unnecessary_wraps = "warn"
unnested_or_patterns = "warn"
unreadable_literal = "warn"
unsafe_derive_deserialize = "warn"
unused_async = "warn"
unused_peekable = "warn"
unused_rounding = "warn"
unused_self = "warn"
unwrap_in_result = "warn"
unwrap_used = "warn"
useless_let_if_seq = "warn"
verbose_file_reads = "warn"
wildcard_dependencies = "warn"
wildcard_imports = "warn"
zero_sized_map_values = "warn"
