[package]
name = "netwopenapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-service = { workspace = true }
actix-web = { workspace = true }
utoipa = { workspace = true }
pin-project = { workspace = true }
