[package]
name = "apistos-core"
description = "Actix-web OpenAPI v3.0 documentation generator"
readme = "README.md"
keywords = ["actix", "actix-web", "openapi", "oas3", "documentation"]
categories = ["web-programming"]

version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
publish.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
pin-project = { workspace = true, optional = true }
schemars = { workspace = true }

actix-web = { workspace = true, optional = true }
actix-web-lab = { workspace = true, optional = true }
actix-web-grants = { workspace = true, optional = true }
actix-multipart = { workspace = true, optional = true }
actix-session = { workspace = true, optional = true }
garde-actix-web = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
rust_decimal = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_qs = { workspace = true, features = ["actix4"], optional = true }
uuid = { workspace = true, optional = true }
url = { workspace = true, optional = true }
alloy-primitives = { workspace = true, optional = true }

apistos-models = { path = "../apistos-models", version = "0.6.0", features = ["deserialize"] }

[dev-dependencies]
assert-json-diff = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true

[features]
actix = ["dep:actix-web", "dep:pin-project"]
actix-web-grants = ["dep:actix-web-grants"]

# query related features
query = []
qs_query = ["actix", "dep:serde_qs", "garde-actix-web?/serde_qs"]
lab_query = ["actix", "dep:actix-web-lab", "garde-actix-web?/lab_query"]

# actix garde feature
garde = ["actix", "dep:garde-actix-web"]

# extra types related features
chrono = ["dep:chrono", "schemars/chrono"]
multipart = ["actix", "dep:serde", "dep:actix-multipart"]
rust_decimal = ["dep:rust_decimal", "schemars/rust_decimal"]
actix-session = ["actix", "dep:serde", "dep:actix-session"]
uuid = ["dep:uuid", "schemars/uuid1"]
url = ["dep:url", "schemars/url"]
alloy_primitives = ["dep:alloy-primitives", "schemars/alloy_primitives"]

extras = ["chrono", "multipart", "rust_decimal", "uuid", "url", "alloy_primitives"]

default = ["actix", "query"]
