[package]
name = "apistos-diesel-test"
description = "Test to ensure Apistos can live with diesel-async"
publish = false

version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true
license.workspace = true

[dev-dependencies]
schemars = { package = "apistos-schemars", version = "0.8" }
apistos = { path = "../apistos", version = "0.5.0" }
diesel-async = { version = "0.5.2", features = ["postgres", "deadpool"]}

[lints]
workspace = true