[package]
name = "apistos-gen-test"
description = "Actix-web OpenAPI v3.0 documentation generator"
readme = "README.md"
keywords = ["actix", "actix-web", "openapi", "oas3", "documentation"]
categories = ["web-programming"]
publish = false

version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true
license.workspace = true

[dev-dependencies]
actix-multipart = { workspace = true }
actix-rt = { workspace = true }
actix-test = { workspace = true }
actix-utils = { workspace = true }
actix-web = { workspace = true }
actix-web-grants = { workspace = true }
assert-json-diff = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
futures-core = { workspace = true }
# we use the "preserve_order" feature from schemars here following https://github.com/netwo-io/apistos/pull/78
schemars = { workspace = true, features = ["preserve_order"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

apistos = { path = "../apistos", features = ["multipart", "uuid"] }
apistos-core = { path = "../apistos-core", features = ["actix-web-grants"] }
apistos-gen = { path = "../apistos-gen", features = ["actix-web-macros"] }

[lints]
workspace = true
