[package]
name = "apistos-gen"
description = "Actix-web OpenAPI v3.0 documentation generator"
readme = "README.md"
keywords = ["actix", "actix-web", "openapi", "oas3", "documentation"]
categories = ["web-programming"]

version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
publish.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
actix-web = { workspace = true }
convert_case = { workspace = true }
darling = { workspace = true }
proc-macro2 = { workspace = true }
proc-macro-error2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full", "extra-traits"] }

[dev-dependencies]
actix-multipart = { workspace = true }
actix-rt = { workspace = true }
actix-test = { workspace = true }
actix-utils = { workspace = true }
actix-web-grants = { workspace = true }
assert-json-diff = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
futures-core = { workspace = true }
garde = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

apistos = { path = "../apistos", version = "1.0.0-pre-release.9", features = ["multipart", "uuid"] }
apistos-core = { path = "../apistos-core", version = "1.0.0-pre-release.9", features = ["actix-web-grants"] }

[lints]
workspace = true

[lib]
proc-macro = true
