[package]
name = "apistos-rapidoc"
description = "Actix-web OpenAPI v3.0 documentation generator"
readme = "README.md"
keywords = ["actix", "actix-web", "openapi", "oas3", "documentation"]
categories = ["web-programming"]

version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
publish.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
apistos-plugins = { path = "../apistos-plugins", version = "0.6.0" }

[lints]
workspace = true
