[package]
name = "apistos"
description = "Actix-web OpenAPI v3.0 documentation generator"
readme = "README.md"
keywords = ["actix", "actix-web", "openapi", "oas3", "documentation"]
categories = ["web-programming"]

version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
publish.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
actix-service = { workspace = true }
actix-web = { workspace = true }
indexmap = { workspace = true }
log = { workspace = true }
md5 = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

apistos-core = { path = "../apistos-core", version = "0.1.7" }
apistos-gen = { path = "../apistos-gen", version = "0.1.7" }
apistos-models = { path = "../apistos-models", version = "0.1.7" }
apistos-rapidoc = { path = "../apistos-rapidoc", version = "0.1.7", optional = true }
apistos-swagger-ui = { path = "../apistos-swagger-ui", version = "0.1.7", optional = true }

[dev-dependencies]
apistos-models = { path = "../apistos-models", version = "0.1.7", features = ["deserialize"] }

[lints]
workspace = true

[features]
# query related features
query = []
qs_query = ["apistos-core/qs_query"]
lab_query = ["apistos-core/lab_query"]

# actix garde feature
garde = ["apistos-core/garde"]

# extra types related features
chrono = ["apistos-core/chrono"]
multipart = ["apistos-core/multipart"]
rust_decimal = ["apistos-core/rust_decimal"]
uuid = ["apistos-core/uuid"]
url = ["apistos-core/url"]
extras = ["chrono", "multipart", "rust_decimal", "uuid", "url"]

# ui features
rapidoc = ["dep:apistos-rapidoc"]
swagger-ui = ["dep:apistos-swagger-ui"]

default = ["query"]
