[package]
name = "apistos"
description = "Actix-web OpenAPI v3.0 documentation generator"
readme = "../README.md"
keywords = ["actix", "actix-web", "openapi", "oas3", "documentation"]
categories = ["web-programming"]

version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
publish.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
actix-service = { workspace = true }
actix-web = { workspace = true }
futures-util = { workspace = true }
indexmap = { workspace = true }
log = { workspace = true }
md5 = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

apistos-core = { path = "../apistos-core", version = "1.0.0-pre-release.9" }
apistos-gen = { path = "../apistos-gen", version = "1.0.0-pre-release.9" }
apistos-models = { path = "../apistos-models", version = "1.0.0-pre-release.9" }
apistos-plugins = { path = "../apistos-plugins", version = "1.0.0-pre-release.9" }
apistos-rapidoc = { path = "../apistos-rapidoc", version = "1.0.0-pre-release.9", optional = true }
apistos-redoc = { path = "../apistos-redoc", version = "1.0.0-pre-release.9", optional = true }
apistos-scalar = { path = "../apistos-scalar", version = "1.0.0-pre-release.9", optional = true }
apistos-swagger-ui = { path = "../apistos-swagger-ui", version = "1.0.0-pre-release.9", optional = true }

[dev-dependencies]
actix-web-lab = { workspace = true }
garde-actix-web = { workspace = true }
schemars = { workspace = true }
assert-json-diff = { workspace = true }

apistos-models = { path = "../apistos-models", version = "1.0.0-pre-release.9", features = ["deserialize"] }
apistos-rapidoc = { path = "../apistos-rapidoc", version = "1.0.0-pre-release.9" }
apistos-redoc = { path = "../apistos-redoc", version = "1.0.0-pre-release.9" }
apistos-scalar = { path = "../apistos-scalar", version = "1.0.0-pre-release.9" }
apistos-swagger-ui = { path = "../apistos-swagger-ui", version = "1.0.0-pre-release.9" }

[lints]
workspace = true

[features]
# query related features
query = []
qs_query = ["apistos-core/qs_query"]
lab_query = ["apistos-core/lab_query"]

# actix garde feature
garde = ["apistos-core/garde"]

# actix web grants feature
actix-web-grants = ["apistos-core/actix-web-grants"]

# extra types related features
chrono = ["apistos-core/chrono"]
ipnetwork = ["apistos-core/ipnetwork"]
multipart = ["apistos-core/multipart"]
rust_decimal = ["apistos-core/rust_decimal"]
uuid = ["apistos-core/uuid"]
url = ["apistos-core/url"]
extras = ["chrono", "ipnetwork", "multipart", "rust_decimal", "uuid", "url"]

# ui features
rapidoc = ["dep:apistos-rapidoc"]
redoc = ["dep:apistos-redoc"]
scalar = ["dep:apistos-scalar"]
swagger-ui = ["dep:apistos-swagger-ui"]

default = ["query"]
