[package]
name = "netwopenapi-core"

version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
publish.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
pin-project = { workspace = true }
schemars = { workspace = true }

actix-web = { workspace = true, optional = true }
actix-multipart = { workspace = true, optional = true }
garde-actix-web = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
rust_decimal = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_qs = { workspace = true, features = ["actix4"], optional = true }
uuid = { workspace = true, optional = true }
url = { workspace = true, optional = true }

netwopenapi-models = { path = "../netwopenapi-models" }

[features]
actix = ["actix-web"]

# query related features
query = []
qs_query = ["actix", "dep:serde_qs", "garde-actix-web?/serde_qs"]

# actix garde feature
garde = ["actix", "dep:garde-actix-web"]

# extra types related features
chrono = ["dep:chrono", "schemars/chrono"]
multipart = ["actix", "dep:serde", "dep:actix-multipart"]
rust_decimal = ["dep:rust_decimal", "schemars/rust_decimal"]
uuid = ["dep:uuid", "schemars/uuid1"]
url = ["dep:url", "schemars/url"]
extras = ["chrono", "multipart", "rust_decimal", "uuid", "url"]

default = ["actix", "query"]
