[package]
name = "netwopenapi-gen-test"
version = "0.1.0"

authors.workspace = true
edition.workspace = true
repository.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
schemars = { workspace = true }
netwopenapi = { path = "../netwopenapi" }
netwopenapi-core = { path = "../netwopenapi-core" }
netwopenapi-gen = { path = "../netwopenapi-gen" }
