[package]
name = "netwopenapi-gen"
version = "0.1.0"

authors.workspace = true
edition.workspace = true
repository.workspace = true
publish.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { workspace = true }
convert_case = { workspace = true }
darling = { workspace = true }
proc-macro2 = { workspace = true }
proc-macro-error = { workspace = true }
quote = { workspace = true }
serde_plain = { workspace = true }
syn = { workspace = true, features = ["full", "extra-traits"] }

[lib]
proc-macro = true
