[package]
name = "netwopenapi-gen"
version = "0.1.0"

authors.workspace = true
edition.workspace = true
repository.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
actix-web = { workspace = true }
convert_case = { workspace = true }
darling = { workspace = true }
proc-macro2 = { workspace = true }
proc-macro-error = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full", "extra-traits"] }

schemars = { workspace = true }
netwopenapi-core = { path = "../netwopenapi-core" }

[dev-dependencies]
garde = { workspace = true }
serde = { workspace = true }

netwopenapi = { path = "../netwopenapi" }

[lib]
proc-macro = true
