[package]
name = "netwopenapi"
version = "0.1.0"

authors.workspace = true
edition.workspace = true
repository.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
actix-service = { workspace = true }
actix-web = { workspace = true }
once_cell = { workspace = true }
pin-project = { workspace = true }
regex = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_plain = { workspace = true }
utoipa = { workspace = true }
utoipa-rapidoc = { workspace = true, optional = true }
utoipa-redoc = { workspace = true, optional = true }
utoipa-swagger-ui = { workspace = true, optional = true }

netwopenapi-gen = { path = "../netwopenapi-gen" }

actix-multipart = { workspace = true, optional = true }
garde-actix-web = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
garde = { workspace = true, optional = true }
rust_decimal = { workspace = true, optional = true }
serde_qs = { workspace = true, features = ["actix4"], optional = true }
uuid = { workspace = true, optional = true }
url = { workspace = true, optional = true }

[features]
# query related features
query = []
qs_query = ["dep:serde_qs", "garde-actix-web?/serde_qs"]

# actix garde feature
garde = ["dep:garde", "dep:garde-actix-web"]

# extra types related features
chrono = ["dep:chrono", "utoipa/chrono"]
multipart = ["dep:actix-multipart"]
rust_decimal = ["dep:rust_decimal", "utoipa/decimal"]
uuid = ["dep:uuid", "utoipa/uuid"]
url = ["dep:url", "utoipa/url"]
extras = ["chrono", "multipart", "rust_decimal", "uuid", "url"]

# UI related features
rapidoc = ["utoipa-rapidoc"]
redoc = ["utoipa-redoc"]
swagger-ui = ["utoipa-swagger-ui"]

default = ["query"]

#@todo doc
#[package.metadata.docs.rs]
#features = ["actix_extras", "non_strict_integers", "openapi_extensions", "uuid", "ulid", "url", "yaml"]
#rustdoc-args = ["--cfg", "doc_cfg"]
