[package]
name = "netwopenapi"
description = "Actix-web OpenAPI v3.0 documentation generator"
readme = "README.md"
keywords = ["actix", "actix-web", "openapi", "oas3", "documentation"]
categories = ["web-programming"]
version = "0.1.0"

authors.workspace = true
edition.workspace = true
repository.workspace = true
publish.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
actix-service = { workspace = true }
actix-web = { workspace = true }
indexmap = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

netwopenapi-core = { path = "../netwopenapi-core" }
netwopenapi-gen = { path = "../netwopenapi-gen" }
netwopenapi-models = { path = "../netwopenapi-models" }

[features]
# query related features
query = []
qs_query = ["netwopenapi-core/qs_query"]

# actix garde feature
garde = ["netwopenapi-core/garde"]

# extra types related features
chrono = ["netwopenapi-core/chrono"]
multipart = ["netwopenapi-core/multipart"]
rust_decimal = ["netwopenapi-core/rust_decimal"]
uuid = ["netwopenapi-core/uuid"]
url = ["netwopenapi-core/url"]
extras = ["chrono", "multipart", "rust_decimal", "uuid", "url"]

default = ["query"]
